data/derived/sp14/progs/unify/prog3603.ml.out
Characters 83-84:
  else wwhile f b;;
              ^
Error: This expression has type 'a but an expression was expected of type
         'a * (('b -> 'c) * bool)
       The type variable 'a occurs inside 'a * (('b -> 'c) * bool)
